<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sudoku Blitz</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="SinglePlayer">Single Player</string>
    <string name="Multiplayer">Multiplayer</string>
    <string name="Settings">Settings</string>
    <string name="SudokuBlitz">Sudoku Blitz</string>
    <string name="GameButton">Game</string>
    <string name="title_activity_multiplayer_menu">Multiplayer Menu</string>
    <string name="title_activity_join">Join</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="title_multiplayer">Multiplayer</string>
    <string name="multiplayer_menu_host">Host</string>
    <string name="multiplayer_menu_join">Join</string>
    <string name="lobby_start_game">Start game</string>
    <string name="join_searching">Searching…</string>
    <string name="lobby_wait_for_guest">Waiting for connection…</string>
    <string name="lobby_player_joined">Player joined!</string>
    <string name="lobby_wait_for_host">Waiting for host player to start…</string>
    <string name="game_setup">Game Setup</string>
    <string name="show_points">Show points</string>
    <string name="show_timer">Show timer</string>
    <string name="penalty_on">Penalty on</string>
    <string name="AI_difficulty">AI Difficulty</string>
    <string name="SoundSwitch">Sound</string>
    <string name="MusicSwitch">Music</string>
    <string name="team_name"><u>Best Cat Hustlers</u></string>
    <string name="titles">Lead Android Dev\nAlso Lead Android Dev\nLead Android.\nBest Android Dev</string>
    <string name="team_people_names">Xavier Chong\nSteven Yang\nAlexander Kim\nJiaxi Zhang</string>
    <string name="user_name">User Name</string>
    <string name="update_user_name">Update User Name</string>

    <!--  Bluetooth -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>

    <string name="lobby_title_connected">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="lobby_title_connecting">Connecting...</string>
    <string name="lobby_title_listen">Waiting for connection…</string>
    <string name="lobby_title_none">No connection</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
</resources>
